--- a/Ironhack/super-manager-project/package.json
+++ b/Ironhack/super-manager-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "super-manager-project-server",
+  "name": "super-manager-project",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,16 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-jwt": "^7.7.7",
-    "jsonwebtoken": "^8.5.1",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
