get all movies .... done

--- a/Ironhack/super-manager-movies/package.json
+++ b/Ironhack/super-manager-movies/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.7.1",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "tmdbv3": "^0.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
